--- a/src/app/employees-schedule/employees-schedule.component.html
+++ b/src/app/employees-schedule/employees-schedule.component.html
@@ -1,3 +1,23 @@
-<p>
-  employees-schedule works!
-</p>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Employee</th>
+    <ng-container *ngFor="let day of calednarDaysArr">
+      <th *ngIf="day.isActive">
+
+          {{ day.dayName }} {{ day.i }}
+      </th>
+    </ng-container>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let employee of employees">
+    {{ employee.name }}
+    <ng-container *ngFor="let day of calednarDaysArr">
+      <th *ngIf="day.isActive">
+
+      </th>
+    </ng-container>
+  </tr>
+  </tbody>
+</table>
