--- a/src/app/employees-schedule/employees-schedule.component.css
+++ b/src/app/employees-schedule/employees-schedule.component.css
@@ -16,11 +16,16 @@
 .employee-field:hover {
   background-color: aliceblue;
 }
+.employee-field {
+  cursor: pointer;
+}
 
 .selected-field {
   background-color: lightblue;
   border: 2px dashed #98cce6;
   border-spacing: 1px;
+  user-select: none;
+  cursor: pointer;
 }
 
 .context-menu {
