--- a/src/app/employees-schedule/employees-schedule.component.html
+++ b/src/app/employees-schedule/employees-schedule.component.html
@@ -14,10 +14,10 @@
     <tr *ngFor="let employee of employees; let empIdx = index">
       <th [classList]="employeeClass === empIdx ? 'highlight' : 'lowLight'">{{ employee.name }}</th>
       <ng-container *ngFor="let day of calendarDaysArr; let dayIdx = index">
-        <th *ngIf="day.isActive" (mouseover)="dayClass = dayIdx; employeeClass = empIdx" (mouseleave)="dayClass = null"
+        <th #cell [id]="dayIdx + '-' + empIdx" *ngIf="day.isActive"
+            (mouseover)="dayClass = dayIdx; employeeClass = empIdx" (mouseleave)="dayClass = null"
             (contextmenu)="onRightClick($event, dayIdx, empIdx)"
-            (mousedown)="mouseDown(dayIdx, empIdx)" (mousemove)="mouseMove(dayIdx, empIdx)" #cell
-            [id]="dayIdx + '-' + empIdx"
+            (mousedown)="mouseDown(dayIdx, empIdx)" (mousemove)="mouseMove(dayIdx, empIdx)"
             [classList]="minDayIdx <= cell.id.split('-')[0] && cell.id.split('-')[0] <= maxDayIdx && minEmpIdx <= cell.id.split('-')[1] && cell.id.split('-')[1] <= maxEmpIdx
             ? 'selected-field' : 'employee-field'">
         </th>
@@ -27,47 +27,9 @@
   </table>
 </div>
 
-<div class="context-menu" *ngIf="contextMenu" [ngStyle]="{'left.px': x, 'top.px': y}" oncontextmenu="return false;"
-     #CMI>
-  <div class="context-menu-option" (click)="showShiftWindow()" (mouseover)="leaveOptionsContext = false">
-    Add shift
-  </div>
-  <div class="context-menu-option" (mouseover)="leaveOptionsContext = true" #CM>
-    Add leave <span style="float: right"> > </span>
-  </div>
-
-
-  <div class="add-leave-options" *ngIf="leaveOptionsContext" (mouseleave)="leaveOptionsContext = false">
-    <div class="context-menu" [ngStyle]="{'left.px': CMI.offsetWidth, 'top.px': CM.offsetHeight + (CM.offsetHeight/2)}">
-      <div class="context-menu-option" *ngFor="let leave of leaveModel.leaves" (click)="addLeave(leave)">
-        {{ leave }}
-      </div>
-    </div>
+<div oncontextmenu="return false;" *ngIf="contextMenu">
+  <div>
+    <app-context-menu (contextMenuBool)="disableContextMenu()" [x]="x" [y]="y">
+    </app-context-menu>
   </div>
 </div>
-
-<div id="add-shift-options" [classList]="showOptions ?  'context-menu': 'hide'" [ngStyle]="{'left.px': x, 'top.px': y}"
-     oncontextmenu="return false;">
-  Work Time
-  <div class="context-menu" id="add-shift-options-time">
-    <form #userForm="ngForm">
-      <div class="form-group">
-        <input type="hidden" name="id" [(ngModel)]="shiftModel.id">
-        <input type="hidden" name="date" [(ngModel)]="shiftModel.date">
-        <label for="add-shift-options-time-start">Start </label>
-        <input class="form-control" id="add-shift-options-time-start" #shiftStart="ngModel" name="shiftStart"
-               type="text" [(ngModel)]="shiftModel.shiftStart"
-               [class.is-invalid]="shiftStart.invalid && shiftStart.touched">
-        <label for="add-shift-options-time-end">End </label>
-        <input class="form-control" id="add-shift-options-time-end" name="shiftEnd" type="text" #shiftEnd="ngModel"
-               [(ngModel)]="shiftModel.shiftEnd" [class.is-invalid]="shiftEnd.invalid && shiftEnd.touched">
-      </div>
-      <div id="add-shift-options-time-btn">
-        <button class="btn btn-outline-success" type="submit" (click)="addShift(userForm.value)">Add</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-
-<button class="btn btn-danger" (mousedown)="mouseDown()">A</button>
