--- a/src/app/context-menu/context-menu.component.css
+++ b/src/app/context-menu/context-menu.component.css
@@ -1,5 +1,5 @@
 .context-menu {
-  position: absolute;
+  position: fixed;
   background-color: #d3d2cc;
   padding: 10px;
   border-radius: 10px;
@@ -17,17 +17,21 @@
 }
 
 .hide {
-  display: none;
+  opacity: 0;
 }
 
 .show {
-  display: unset;
+  display: block;
 }
 
 #add-shift-options-time{
-  position: unset;
+  display: none;
 }
 
 #add-shift-options-time-btn {
   text-align: right;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
