selected fields context menu show update

--- a/src/app/employees-schedule/employees-schedule.component.css
+++ b/src/app/employees-schedule/employees-schedule.component.css
@@ -13,10 +13,10 @@
   color: white;
 }
 
-.employee-field:hover {
+.unselected-field:hover {
   background-color: aliceblue;
 }
-.employee-field {
+.unselected-field {
   cursor: pointer;
 }
 
