--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-navbar></app-navbar>
+<div style="display: block">
+  <div style="padding-bottom: 150px; overflow: hidden;">
+    <app-navbar></app-navbar>
+  </div>
 
-<div style="padding-top: 50px">
-  <router-outlet></router-outlet>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
+
+
