--- a/src/app/context-menu/context-menu.component.html
+++ b/src/app/context-menu/context-menu.component.html
@@ -29,7 +29,7 @@
         Custom
       </div>
       <div class="context-menu-option" *ngFor="let shiftHours of shiftsHoursArr" (click)="addLeave(leaveReason)">
-        {{ shiftHours["shiftStart"] + " " + shiftHours["shiftEnd"]}}
+        {{ shiftHours["shiftStart"] + " - " + shiftHours["shiftEnd"]}}
       </div>
       <div class="context-menu-option" (click)="showShiftWindow(true);">Add...</div>
     </div>
@@ -45,15 +45,13 @@
 
     <form #userForm="ngForm">
         <div class="form-group">
-          <input type="hidden" name="id" [(ngModel)]="shiftModel.id">
-          <input type="hidden" name="date" [(ngModel)]="shiftModel.date">
           <label for="add-shift-options-time-start">Start </label>
           <input class="form-control" id="add-shift-options-time-start" #shiftStart="ngModel" name="shiftStart"
-                 type="text" [(ngModel)]="shiftModel.shiftStart"
+                 type="text" [(ngModel)]="shiftModel1.shiftStart"
                  [class.is-invalid]="shiftStart.invalid && shiftStart.touched">
           <label for="add-shift-options-time-end">End </label>
           <input class="form-control" id="add-shift-options-time-end" name="shiftEnd" type="text" #shiftEnd="ngModel"
-                 [(ngModel)]="shiftModel.shiftEnd" [class.is-invalid]="shiftEnd.invalid && shiftEnd.touched">
+                 [(ngModel)]="shiftModel1.shiftEnd" [class.is-invalid]="shiftEnd.invalid && shiftEnd.touched">
         </div>
         <div id="add-employee-btn">
           <button *ngIf="!addShiftOptionsBool" class="btn btn-outline-success" type="submit" (click)="addShift(userForm.value)">Add</button>
